# HeliosNet

./: .gitignore
helios_backend/: Cargo.toml  README.md  fire_risk_model_training.ipynb  model.onnx  train_model.py
helios_backend/helios_frontend/: package-lock.json  package.json
helios_backend/helios_frontend/src/: App.css  App.tsx  index.css
helios_backend/helios_frontend/src/components/: AirQualityCard.tsx  EnvironmentalMap.tsx  RiskCard.tsx  WeatherCard.tsx
helios_backend/helios_frontend/src/services/: api.ts
helios_backend/migrations/: 20250606162512_create_sensors_table.sql
helios_backend/src/: config.rs  database.rs  main.rs  models.rs
helios_backend/src/clients/: airnow.rs  mod.rs  weather.rs
helios_backend/src/ml/: mod.rs  risk_model.rs
